--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Moon Phase Display</title>
-    <link rel="icon" href="WebIcon.png" type="image/png">
+    <link rel="shortcut icon" type="x-icon" href="WebLogo.png">
     <style>
         body {
             font-family: Arial, sans-serif;
