--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Moon Phase Display</title>
-    <link rel="shortcut icon" type="x-icon" href="WebLogo.png">
+    <link rel="shortcut icon" type="x-icon" href="WaxingGibbous.png">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
             font-family: Arial, sans-serif;
