--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Moon Phase Display</title>
     <link rel="shortcut icon" type="x-icon" href="WaxingGibbous.png">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -92,27 +92,28 @@
         function updateMoonPhase() {
             const now = new Date();
             const moonIllumination = SunCalc.getMoonIllumination(now);
+            const illumination = moonIllumination.fraction * 100;
             let moonPhaseName;
 
-            if (moonIllumination.phase < 0.03) {
+            if (illumination === 0) {
                 moonPhaseName = 'New Moon';
-            } else if (moonIllumination.phase < 0.16) {
+            } else if (illumination > 0 && illumination <= 24) {
                 moonPhaseName = 'Waxing Crescent';
-            } else if (moonIllumination.phase < 0.28) {
+            } else if (illumination > 24 && illumination <= 49) {
                 moonPhaseName = 'First Quarter';
-            } else if (moonIllumination.phase < 0.41) {
+            } else if (illumination > 49 && illumination < 100) {
                 moonPhaseName = 'Waxing Gibbous';
-            } else if (moonIllumination.phase < 0.53) {
+            } else if (illumination === 100) {
                 moonPhaseName = 'Full Moon';
-            } else if (moonIllumination.phase < 0.66) {
+            } else if (illumination < 100 && illumination >= 51) {
                 moonPhaseName = 'Waning Gibbous';
-            } else if (moonIllumination.phase < 0.78) {
-                moonPhaseName = 'Third Quarter';
-            } else if (moonIllumination.phase < 0.91) {
-                moonPhaseName = 'Waning Crescent';
-            } else {
-                moonPhaseName = 'New Moon';
+            } else if (illumination < 51 && illumination >= 26) {
+                moonPhaseName = 'Last Quarter';
+            } else if (illumination < 26 && illumination > 0) {
+                moonPhaseName = '
+                    Waning Crescent';
             }
+
             const phaseImages = {
                 'New Moon': 'New Moon.png',
                 'Waxing Crescent': 'Waxing Crescent.png',
@@ -120,7 +121,7 @@
                 'Waxing Gibbous': 'Waxing Gibbous.png',
                 'Full Moon': 'Full Moon.png',
                 'Waning Gibbous': 'Waning Gibbous.png',
-                'Third Quarter': 'Third Quarter.png',
+                'Last Quarter': 'Last Quarter.png',
                 'Waning Crescent': 'Waning Crescent.png'
             };
 
@@ -141,5 +142,7 @@
         setInterval(updateMoonPhase, 1000);
     </script>
 </body>
+
+</html>
 
 </html>
