--- a/index.html
+++ b/index.html
@@ -110,8 +110,7 @@
             } else if (illumination < 51 && illumination >= 26) {
                 moonPhaseName = 'Last Quarter';
             } else if (illumination < 26 && illumination > 0) {
-                moonPhaseName = '
-                    Waning Crescent';
+                moonPhaseName = 'Waning Crescent';
             }
 
             const phaseImages = {
