--- a/index.html
+++ b/index.html
@@ -61,6 +61,13 @@
             margin: 0;
         }
 
+        #moon-illumination-number {
+            font-size: 15px;
+            font-weight: bold;
+            color: #333;
+            margin: 0;
+        }
+
         footer {
             position: fixed;
             bottom: 0;
@@ -130,6 +137,7 @@
                 return;
             }
 
+            document.getElementById('moon-illumination-number').textContent = illumination;
             document.getElementById('moon-phase-name').textContent = moonPhaseName;
             document.getElementById('moon-image').src = imageName;
 
