--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         }
 
         #moon-illumination-number {
-            font-size: 15px;
+            font-size: 13px;
             font-weight: bold;
             color: #333;
             margin: 0;
@@ -89,6 +89,7 @@
         <div class="moon-phase-display">
             <img id="moon-image" src="" alt="Moon Phase">
             <p id="moon-phase-name"></p>
+            <p id="moon-illumination-number"></p>
         </div>
     </div>
     <footer>
