--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Moon Phase Display</title>
+    <title>Moon Phase Tracker</title>
     <link rel="icon" href="WebLogo.png" type="image/png">
-    <meta name="description" content="Website that provides real tracking on the current Moon Phase! Up to date and 100% accurate">
+    <meta name="name" content="Moon Phase Tracker">
+    <meta name="description" content="See what the current Moon Phase is, and the illumination pertencage">
     <meta name="keywords" content="moon phase, moon, astronomy">
     <meta name="author" content="Roblify">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
