--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
                 document.body.style.backgroundImage = 'url("https://images8.alphacoders.com/675/675069.jpg")';
                 visibility = 'Daylight';
             } else {
-                document.body.style.backgroundImage = 'url("https://4kwallpapers.com/images/wallpapers/starry-sky-clouds-blue-sky-night-2560x1440-1094.jpg")';
+                document.body.style.backgroundImage = 'url("https://wallpapercave.com/wp/wp5569710.jpg")';
                 visibility = 'Night Time';
             }
 
