--- a/index.html
+++ b/index.html
@@ -149,12 +149,12 @@
             <br>
             <div class="button-container">
                 <a class="hemisphere-button active" id="northern-hemisphere" href="#">
-                    <img src="NH.png" alt="Northern Hemisphere">
+                    <img src="SH.png" alt="Northern Hemisphere">
                     <span>Northern Hemisphere</span>
                 </a>
                 <br>
                 <a class="hemisphere-button" id="southern-hemisphere" href="#">
-                    <img src="SH.png" alt="Southern Hemisphere">
+                    <img src="NH.png" alt="Southern Hemisphere">
                     <span>Southern Hemisphere</span>
                 </a>
             </div>
